--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -7,10 +7,10 @@
     und diese -->
     
     <!-- Hier bitte die Vorkenntnisse im Bereich Programmierung zu Beginn der Veranstaltung kurz beschreiben! -->
-    <a href="https://weiberta.github.io/Aufgabe_01/webseite.html" target="_blank">Aufgabe 1, 1.1.2015</a></br>
-    <a href="https://weiberta.github.io/Konzept01/webseite.html" target="_blank">Konzept 1, 1.1.2015</a></br>
-    <a href="https://weiberta.github.io/Scribble02/webseite.html" target="_blank">Aufgabe 2, 1.1.2015</a></br>
-    <a href="https://weiberta.github.io/Aufgabe_02/webseite.html" target="_blank">Aufgabe 1, 1.1.2015</a></br>
+    <a href="https://weiberta.github.io/Aufgabe_01/webseite.html" target="_blank">Aufgabe 1, 28.03.2019</a></br>
+    <a href="https://weiberta.github.io/Konzept01/webseite.html" target="_blank">Konzept 1, 28.03.2019</a></br>
+    <a href="https://weiberta.github.io/Scribble02/webseite.html" target="_blank">Aufgabe 2, 07.04.2019</a></br>
+    <a href="https://weiberta.github.io/Aufgabe_02/webseite.html" target="_blank">Konzept 2, 07.04.2019</a></br>
 
     
     <hr>
