--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -10,7 +10,7 @@
     <a href="https://weiberta.github.io/Aufgabe_01/webseite.html" target="_blank">Aufgabe 1, 28.03.2019</a></br>
     <a href="https://weiberta.github.io/Aufgabe_01/Konzept01.jpg" target="_blank">Konzept 1, 28.03.2019</a></br>
     <a href="weiberta.github.io/Aufgabe_02/Scribble02.jpg" target="_blank">Aufgabe 2, 07.04.2019</a></br>
-    <a href="weiberta.github.io/Aufgabe_02/webseite.html" target="_blank">Konzept 2, 07.04.2019</a></br>
+    <a href="weiberta.github.io/Aufgabe_02/Augabe_02.html" target="_blank">Konzept 2, 07.04.2019</a></br>
 
     
     <hr>
