--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -11,7 +11,7 @@
     <a href="https://weiberta.github.io/Aufgabe_01/Konzept01.jpg" target="_blank">Konzept 1, 28.03.2019</a></br>
     <a href="https://weiberta.github.io/Aufgabe_02/Aufgabe_02.html" target="_blank">Aufgabe 2, 07.04.2019</a></br>
     <a href="https://weiberta.github.io/Aufgabe_02/Konzept02.jpg"    target="_blank">Konzept 2, 07.04.2019</a></br>
-  
+    <a href="https://weiberta.github.io/Aufgabe_03/Scribble03.jpg"    target="_blank">Konzept 3, 07.04.2019</a></br>    
 
     
     <hr>
