--- a/Aufgabe_03/Aufgabe03.html
+++ b/Aufgabe_03/Aufgabe03.html
@@ -11,7 +11,7 @@
     </head>
 <body>
     <header>
-            <h1>DISSOZIATIVE/h1>
+            <h1>DISSOZIATIVE </h1>
             <h5>Allgemeine Informationen zu Bewusstsein und Psyche</h5>
             <nav>
                 <ul>
