--- a/Aufgabe_03/Aufgabe03.html
+++ b/Aufgabe_03/Aufgabe03.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 
-    <link href="stylesheet.css" type="text/css" rel="stylesheet">
+    <link href="style.css" type="text/css" rel="stylesheet">
 
         <meta char-set="utf-8">
         <meta name="discription" content="Willkommen">
