--- a/Aufgabe_03/Aufgabe03.html
+++ b/Aufgabe_03/Aufgabe03.html
@@ -2,8 +2,11 @@
 <html>
     <head>
 
-    <link href="style.css" type="text/css" rel="stylesheet">
+        <!DOCTYPE html>
+<html>
+    <head>
 
+    <link rel="stylesheet" type="text/css" href="/Aufgabe_03/stylesheet.css">
         <meta char-set="utf-8">
         <meta name="discription" content="Willkommen">
         <meta name="author" content="Angelina Weibert"
@@ -11,7 +14,7 @@
     </head>
 <body>
     <header>
-            <h1>DISSOZIATIVE</h1>
+            <h1>DISSOZIATIVE </h1>
             <h5>Allgemeine Informationen zu Bewusstsein und Psyche</h5>
             <nav>
                 <ul>
@@ -78,7 +81,7 @@ In einem nicht-materialistischen Weltbild kann aus dem Wissen über die physikal
     <footer>
         <h3>Impressum:</h3>
         <p>Angelina Weibert</p>
-        <a href="mailto:angelina.weibert@hs-furtwangen.de">E</a>
+        <a href="mailto:angelina.weibert@hs-furtwangen.de">e-Mail</a>
     </footer>
 
 </body>
