--- a/Aufgabe_03/Aufgabe03.html
+++ b/Aufgabe_03/Aufgabe03.html
@@ -6,7 +6,7 @@
 <html>
     <head>
 
-    <link rel="stylesheet" type="text/css" href="/Aufgabe_03/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="weiberta.github.io/Aufgabe_03/stylesheet.css">
         <meta char-set="utf-8">
         <meta name="discription" content="Willkommen">
         <meta name="author" content="Angelina Weibert"
