--- a/Aufgabe_03/Aufgabe03.html
+++ b/Aufgabe_03/Aufgabe03.html
@@ -5,7 +5,8 @@
 <html>
     <head>
 
-        <link href="stylesheet.css" rel="stylesheet"
+           
+        <link href="stylesheet.css" type="text/css" rel="stylesheet"
 
         <meta char-set="utf-8">
         <meta name="discription" content="Willkommen">
@@ -13,6 +14,13 @@
 
     </head>
 <body>
+
+
+
+
+
+
+
     <header>
             <h1>DISSOZIATIVE </h1>
             <h5>Allgemeine Informationen zu Bewusstsein und Psyche</h5>
