--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -13,7 +13,7 @@
     <li> <a href="https://weiberta.github.io/Aufgabe_03/Scribble03.JPG"    target="_blank">Konzept 3, 07.04.2019</a></br> </li>    
     <li> <a href="https://weiberta.github.io/Aufgabe_02/Aufgabe_02.html" target="_blank">Aufgabe 2, 07.04.2019</a></br> </li>
     <li> <a href="https://weiberta.github.io/Aufgabe_02/Konzept02.jpg"    target="_blank">Konzept 2, 07.04.2019</a></br> </li>
-    <li> <a href="https://weiberta.github.io/Aufgabe_01/Aufgabe01.html" target="_blank">Konzept 1, 28.03.2019</a></br> </li>
+    <li> <a href="https://weiberta.github.io/Aufgabe_01/Aufgabe01.html" target="_blank">Aufgabe 1, 28.03.2019</a></br> </li>
     <li> <a href="https://weiberta.github.io/Aufgabe_01/Konzept01.jpg" target="_blank">Konzept 1, 28.03.2019</a></br> </li>   
     
 </ul>   
