--- a/Aufgabe_04/AFG04.html
+++ b/Aufgabe_04/AFG04.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <!DOCTYPE html>
+<html>
+    <head>
 
-<head>
+           
+        <link href="stylesheet.css" type="text/css" rel="stylesheet"
 
-    <meta charset="UTF-8">
-    <title>DISSOZIATIVE</title>
-    
+        <meta char-set="utf-8">
+        <meta name="discription" content="Willkommen">
+        <meta name="author" content="Angelina Weibert"
 
-
-
-    <link rel="stylesheet" type="text/css" href="stylesheet1.css">
-
-
-</head>
+    </head>
 
 <body> 
     <header>
