--- a/Aufgabe_04/AFG04.html
+++ b/Aufgabe_04/AFG04.html
@@ -6,7 +6,7 @@
     <head>
 
            
-        <link href="stylesheet.css" type="text/css" rel="stylesheet"
+        <link href="stylesheet3.css" type="text/css" rel="stylesheet"
 
         <meta char-set="utf-8">
         <meta name="discription" content="Willkommen">
@@ -21,10 +21,10 @@
 
         <nav>
             <ul>
-                <li>DISSOZIATIVE</li>
-                <li> DIE PSYCHE </li>
-                <li> DAS BEWUSSTSEIN </li>
-                <li>KONTAKT </li>
+                <li>Dissoziative</li>
+                <li> Die Psyche</li>
+                <li> Das Bewusstsein </li>
+                <li> Kontakt </li>
             </ul>
         </nav>
     </header>
