--- a/Aufgabe_04/AFG04.html
+++ b/Aufgabe_04/AFG04.html
@@ -30,7 +30,7 @@
     </header>
      
 
-    <h2>Informationen</h2>
+    <h2>Allgemeine Informationen über die Psyche</h2>
 
     <aside class="asideleft">
               <ul2 class="balken"><p>Dissoziative</p></ul2>
