--- a/Aufgabe_04/AFG04.html
+++ b/Aufgabe_04/AFG04.html
@@ -9,7 +9,7 @@
         <link href="stylesheet3.css" type="text/css" rel="stylesheet"
 
         <meta char-set="utf-8">
-        <meta name="discription" content="Willkommen">
+        <meta name="discription" content="hi na">
         <meta name="author" content="Angelina Weibert"
 
     </head>
