--- a/Aufgabe_04/AFG04.html
+++ b/Aufgabe_04/AFG04.html
@@ -117,6 +117,7 @@ I've seen it in the workers who would rather cut their hours back a day than see
 Now let me be clear. Perhaps somebody told her along the way that the source of her mother's problems were blacks who were on welfare and too lazy to work, or Hispanics who were coming into the country illegally. But I will also renew the tough, direct diplomacy that can prevent Iran from obtaining nuclear weapons and curb Russian aggression. I know, too, that Islam has always been a part of America's story. Today, America has a dual responsibility: to help Iraq forge a better future - and to leave Iraq to Iraqis. The third source of tension is our shared interest in the rights and responsibilities of nations on nuclear weapons. </article>
        </section6>
 
+     <div class="subCC">
        <section7 class="texte">
 
         <img src="https://pixabay.com/de/photos/zarten-bl%C3%BCten-romantische-rosa-4174441/" class="bild">
