--- a/Aufgabe_05/Aufgabe05.html
+++ b/Aufgabe_05/Aufgabe05.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta chartset="utf-8" , name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet2.css">
     <title> Katzenpension </title>
 </head>
 <header>
