--- a/Aufgabe_05/Aufgabe05.html
+++ b/Aufgabe_05/Aufgabe05.html
@@ -47,8 +47,6 @@
 
 <div style="overflow:auto">
     <div class="left">
-        ...<br>
-        ...<br>
 
     </div>
 
@@ -63,11 +61,11 @@
         <div class="main">
             <h2>Lorum Ipsum</h2>
             <div id="gal">
-                <a tabindex="0" href="#a2"><img src="cat.jpg" /> </a>
-                <a tabindex="0" href="#a2"><img src="cat2.jpg" /> </a>
-                <a tabindex="0" href="#a3"><img src="cat3.jpg"/> </a>
-                <a tabindex="0" href="#a4"><img src="cat4.jpg" /> </a>
-                <a tabindex="0" href="#a5"><img src="cat8.jpg"/> </a>
+                <a tabindex="0" href="#a2"><img src="Katzen/cat.jpg" /> </a>
+                <a tabindex="0" href="#a2"><img src="Katzen/cat2.jpg" /> </a>
+                <a tabindex="0" href="#a3"><img src="Katzen/cat3.jpg"/> </a>
+                <a tabindex="0" href="#a4"><img src="Katzen/cat4.jpg" /> </a>
+                <a tabindex="0" href="#a5"><img src="Katzen/cat8.jpg"/> </a>
 
 
 
@@ -75,11 +73,11 @@
 
 
                 <div id="ausgabe">
-                    <img src="cat.jpg"/>
-                    <img src="cat2.jpg"/>
-                    <img src="cat3.jpg"/>
-                    <img src="cat4.jpg"/>
-                    <img src="cat8.jpg"/>
+                    <img src="Katzen/cat.jpg"/>
+                    <img src="Katzen/cat2.jpg"/>
+                    <img src="Katzen/cat3.jpg"/>
+                    <img src="Katzen/cat4.jpg"/>
+                    <img src="Katzen/cat8.jpg"/>
 
 
                 </div>
@@ -160,7 +158,7 @@
         </p>
     </div>
 
-
+<footer>
     <div class="right">
         <h2>Kontakt</h2>
         <p>Hochschule Furtwangen
@@ -169,6 +167,8 @@
 
             E-Mail: angelina.weibert@hs-furtwangen.de</p>
     </div>
+    </footer>
+
 </div>
 </div>
 </body>
