--- a/Aufgabe_05/Aufgabe05.html
+++ b/Aufgabe_05/Aufgabe05.html
@@ -57,7 +57,7 @@
         </div>
 
         <div class="main">
-            <h2>Lorum Ipsum</h2>
+            <h2> </h2>
             <div id="gal">
                 <a tabindex="0" href="#a2"><img src="Katzen/cat.jpg" /> </a>
                 <a tabindex="0" href="#a2"><img src="Katzen/cat2.jpg" /> </a>
@@ -97,13 +97,12 @@
     <div>
     <h2> Wildkatze </h2>
     <p>
-        Europäische Wildkatze
-        Felis silvestris
-        Schulterhöhe: 35 bis 40 cm
-        Gewicht: 2,5 bis 8 kg
-        Lebensdauer: bis 15 Jahre
-        Lebensraum: große, ruhige, alte Wälder
-        Nahrung: Kleintiere, besonders Mäuse
+       <p> Europäische Wildkatze</p>
+       <br> Schulterhöhe: 35 bis 40 cm </br>
+       <br> Gewicht: 2,5 bis 8 kg</br>
+       <br> Lebensdauer: bis 15 Jahre </br>
+       <br> Lebensraum: große, ruhige, alte Wälder </br>
+        <br> Nahrung: Kleintiere, besonders Mäuse </br>
         Fortpflanzung: Hauptpaarungszeit im Februar; 2 bis 6 Junge nach etwa 10 Wochen; Aufzucht in alten Baumhöhlen
         Verbreitung: ursprünglich Europa, Vorderasien; in Deutschland zeitweise fast ausgerottet; steigendes Vorkommen in Deutschland; gesichertes Vorkommen im Kellerwald
 
@@ -114,6 +113,8 @@
         <h2> Hauskatze </h2>
         <p>
             Die Hauskatze ist keine Katzenrasse im eigentlichen Sinne. In den meisten Fällen werden die Katzen, die es in den unterschiedlichsten Wuchstypen und Farbvarianten gibt, der Rasse EKH (Europäisch Kurzhaar) zugeordnet. Ihre Abstammung haben Hauskatzen von den Wildkatzen. Sie haben sich im Verlauf der Evolution immer mehr an das Leben mit uns Menschen angepasst und sind heutzutage vollkommen domestiziert.
+            Wie bereits erwähnt kommen Hauskatzen in den unterschiedlichsten Fellfarben vor und können sich vom Körperbau stark unterscheiden. Auch die Augenfarbe kann von Katze zu Katze variieren. Man kann sagen, dass keine Hauskatze einer anderen gleicht. Am häufigsten kommen sie zweifarbig vor. Eine Gemeinsamkeit, die alle Hauskatzen miteinander vereint, ist ihr Kurzhaarfell.
+        
         </p>
 
     </div>
@@ -122,7 +123,10 @@
         <h2> Streunerkatze</h2>
         <p>
             In Großstädten, ländlichen Gegenden und in Gewerbegebieten streunen die Katzen auf der Suche nach Nahrung und Unterschlupf umher. All diese Katzen waren einmal Haustiere, die ausgesetzt und sich selbst überlassen wurden. In deutschen Haushalten leben über 12 Millionen Katzen, die von ihren Besitzern zumeist gut versorgt werden.
+          <p>
+            In deutschen Haushalten leben über 12 Millionen Katzen, die von ihren Besitzern zumeist gut versorgt werden. Dem gegenüber stehen etwa zwei Millionen Streunerkatzen, die täglich um ihr Überleben kämpfen müssen. 
         </p>
+    </p> 
 
     </div>
 
@@ -131,7 +135,8 @@
         <p>
             Wer die Wahl hat, hat bekanntlich die Qual: „Eine Rassekatze oder einen echten Mischling? Vom qualifizierten Züchter oder lieber von privat?“
             Viele Fragen, die Du Dir erst einmal durch den Kopf gehen lassen solltest, bevor Du Dich überstürzt hinreißen lässt, oder, weil gerade nach der Paarungszeit der Katzen – also im Frühjahr oder Herbst – ein Überangebot an jungen Kätzchen herrscht.
-
+            Die Entscheidung muss man für einen langen Zeitraum, vielleicht 15 bis 20 Jahre, tragen können; es lohnt sich also, sich vorher in Ruhe darüber klar zu werden, wie die erwachsene Katze „beschaffen“ sein sollte.
+            Denn aus dem goldigen, kleinen Miez wird in absehbarer Zeit ein stattlicher Kater oder eine temperamentvolle Katze.            
         </p>
     </div>
 
