--- a/Aufgabe_05/Aufgabe05.html
+++ b/Aufgabe_05/Aufgabe05.html
@@ -97,13 +97,13 @@
     <div>
     <h2> Wildkatze </h2>
     <p>
-       <p> Europäische Wildkatze</p>
+       <p> - Europäische Wildkatze - </p>
        <br> Schulterhöhe: 35 bis 40 cm </br>
        <br> Gewicht: 2,5 bis 8 kg</br>
        <br> Lebensdauer: bis 15 Jahre </br>
        <br> Lebensraum: große, ruhige, alte Wälder </br>
-        <br> Nahrung: Kleintiere, besonders Mäuse </br>
-        Fortpflanzung: Hauptpaarungszeit im Februar; 2 bis 6 Junge nach etwa 10 Wochen; Aufzucht in alten Baumhöhlen
+       <br> Nahrung: Kleintiere, besonders Mäuse </br>
+       <br> Fortpflanzung: Hauptpaarungszeit im Februar; 2 bis 6 Junge nach etwa 10 Wochen; Aufzucht in alten Baumhöhlen<
         Verbreitung: ursprünglich Europa, Vorderasien; in Deutschland zeitweise fast ausgerottet; steigendes Vorkommen in Deutschland; gesichertes Vorkommen im Kellerwald
 
     </p>
