--- a/Aufgabe_05/Aufgabe05.html
+++ b/Aufgabe_05/Aufgabe05.html
@@ -48,8 +48,8 @@
                 </div>
             </div>
 
-<div style="background-color:#e5e5e5;padding:15px;text-align:center;">
-    <h1>Katzenpension</h1>
+<div style="background-color:#8B0000;padding:15px;text-align:center;">
+    <h1></h1>
 </div>
 
 <div style="overflow:auto">
