--- a/Aufgabe_05/Aufgabe05.html
+++ b/Aufgabe_05/Aufgabe05.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet2.css">
     <title> Katzenpension </title>
 </head>
 <header>
@@ -182,7 +182,8 @@
             Robert-Gerwig-Platz 1
             78120 Furtwangen
 
-            E-Mail: angelina.weibert@hs-furtwangen.de</p>
+            <a href="mailto:angelina.weibert@hs-furtwangen.de">E-Mail: angelina.weibert@hs-furtwangen.de</a>
+            </p>
     </div>
 </footer>
 </div>
