--- a/Aufgabe_05/Aufgabe05.html
+++ b/Aufgabe_05/Aufgabe05.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet0.css">
     <title> Katzenpension </title>
 </head>
 <header>
