--- a/Aufgabe_05/Aufgabe05.html
+++ b/Aufgabe_05/Aufgabe05.html
@@ -40,7 +40,7 @@
     </nav>
 </header>
 
-<body style="font-family:Verdana;color:#aaaaaa;">
+<body style="font-family:Arial, Helvetica, sans-serif;color:#000000;">
 
         <div id="wrapperHeader">
                 <div id="header">
@@ -181,9 +181,10 @@
         <p>Hochschule Furtwangen
             Robert-Gerwig-Platz 1
             78120 Furtwangen
-
+<p>
             <a href="mailto:angelina.weibert@hs-furtwangen.de">E-Mail: angelina.weibert@hs-furtwangen.de</a>
             </p>
+</p>           
     </div>
 </footer>
 </div>
