--- a/Aufgabe_05/Aufgabe05.html
+++ b/Aufgabe_05/Aufgabe05.html
@@ -40,7 +40,7 @@
     </nav>
 </header>
 
-<body style="font-family:Arial, Helvetica, sans-serif;color:#000000;">
+<body style="font-family:Verdana, sans-serif;color:#000000;">
 
         <div id="wrapperHeader">
                 <div id="header">
