--- a/Aufgabe_05/Aufgabe05.html
+++ b/Aufgabe_05/Aufgabe05.html
@@ -40,7 +40,7 @@
     </nav>
 </header>
 
-<body style="font-family:Verdana, sans-serif;color:#000000;">
+<body style="font-family:Arial, Helvetica, sans-serif, sans-serif;color:#000000;">
 
         <div id="wrapperHeader">
                 <div id="header">
@@ -98,7 +98,10 @@
             Die Merkmale der Hauskatze schwanken je nach Verbreitungsgebiet. Bei den gezüchteten Formen sind sie von den Rassestandards abhängig, bei den kulturfolgenden Hauskatzen unterliegen sie dem jeweiligen Selektionsdruck, der von den natürlichen Umweltbedingungen abhängt.
 
             Hauskatzen sind im Durchschnitt etwa 50 Zentimeter lang und 4 Kilogramm schwer mit einer großen Variationsbreite von ca. 2,5 kg bis ca. 8 kg. Männliche Tiere sind etwas größer als weibliche. Die Länge des Schwanzes beträgt etwa 25 bis 30 cm. Eine Ausnahme ist die schwanzlose Manx-Katze von der Insel Man. Die Schulterhöhe beträgt 30 bis 35 cm. In Verbreitungsgebieten mit kälterem Klima sind die Katzen allgemein schwerer und größer, in wärmeren Gebieten sind sie leichter. Die National Geographic Society (1981) gibt die durchschnittliche Kopf-Rumpf-Länge mehrerer beliebter Katzenrassen mit 46 cm und die Schwanzlänge mit 30 cm an. Der bisher schwerste dokumentierte Hauskater war der stark adipöse „Himmy“ aus Australien mit 21,2 kg
-
+<p>
+        Charakter
+        Da es sich bei der Hauskatze um keine Rassekatze handelt, haben die Tiere auch die unterschiedlichsten Charakterzüge. Diese reichen von scheu und zurückhaltend bis hin zu extrem anhänglich und verschmust. Es gibt ruhige Vertreter und äußert temperamentvolle Hauskatzen. Durch ihre Abstammung von den Wildkatzen besitzen die meisten Hauskatzen einen ausgeprägten Jagd- und Spieltrieb. Sie lieben es hinter Mäusen oder ersatzweise hinter Spielzeugen herzujagen.        
+</p>
         </p>
     </section0>
         </aside>
@@ -135,6 +138,7 @@
         <h2> Streunerkatze</h2>
         <p>
             In Großstädten, ländlichen Gegenden und in Gewerbegebieten streunen die Katzen auf der Suche nach Nahrung und Unterschlupf umher. All diese Katzen waren einmal Haustiere, die ausgesetzt und sich selbst überlassen wurden. In deutschen Haushalten leben über 12 Millionen Katzen, die von ihren Besitzern zumeist gut versorgt werden.
+            In deutschen Haushalten leben über 12 Millionen Katzen, die von ihren Besitzern zumeist gut versorgt werden. Dem gegenüber stehen etwa zwei Millionen Streunerkatzen, die täglich um ihr Überleben kämpfen müssen. Ob nun verletzt, abgemagert oder verwahrlost, das Leid von Streunerkatzen hat viele Facetten. Oft erreichen uns Anrufe von tierlieben Menschen, die im eigenen Garten oder in der Nachbarschaft eine oder mehrere Katzen beobachten, die scheinbar Hilfe benötigen. 
         </p>
             </section6>
     </div>
@@ -145,7 +149,12 @@
         <p>
             Wer die Wahl hat, hat bekanntlich die Qual: „Eine Rassekatze oder einen echten Mischling? Vom qualifizierten Züchter oder lieber von privat?“
             Viele Fragen, die Du Dir erst einmal durch den Kopf gehen lassen solltest, bevor Du Dich überstürzt hinreißen lässt, oder, weil gerade nach der Paarungszeit der Katzen – also im Frühjahr oder Herbst – ein Überangebot an jungen Kätzchen herrscht.
-            </section3>
+            <p>
+            Die Entscheidung muss man für einen langen Zeitraum, vielleicht 15 bis 20 Jahre, tragen können; es lohnt sich also, sich vorher in Ruhe darüber klar zu werden, wie die erwachsene Katze „beschaffen“ sein sollte.
+            Denn aus dem goldigen, kleinen Miez wird in absehbarer Zeit ein stattlicher Kater oder eine temperamentvolle Katze.
+            </p>
+        
+        </section3>
         </p>
     </div>
 
@@ -154,6 +163,7 @@
         <h2> Bengalkatze </h2>
         <p>
             Die Bengal hat ein außergewöhnlich elegantes Fellmuster aus fein gezeichneten Rosetten (Kreisen). Es sieht einem Leopardenfell zum Verwechseln ähnlich! Auch wenn die Katze durch ihren schlanken Körper und dem hübschen Äußeren sehr anmutig wirkt: Sie ist alles andere als „etepetete“ (= zimperplich, geziert), sondern eher so etwas wie eine Leistungssportlerin unter den Katzen.
+            Obwohl ihr raubtierartiges Äußeres zu der Annahme verleitet, einen fauchenden Wildfang vor sich zu haben, erweisen sich Bengale als besonders anhänglich. Die Bengalkatze hat Ihnen viel zu „erzählen“, denn sie ist äußerst kommunikativ und plaudert ausgiebig mit Gurren und Miauen. Auch Körperkontakt schätzt sie sehr: Sie will ausdauernd kuscheln und begleitet ihre Menschen überall hin.
         </p>
         </section4>
     </div>
@@ -170,7 +180,7 @@
         <h2>Tiger</h2>
         <p>
             Der Tiger (Panthera tigris) ist eine in Asien verbreitete Großkatze. Er ist aufgrund seiner Größe und des charakteristischen dunklen Streifenmusters auf goldgelbem bis rotbraunem Grund unverwechselbar. Es gibt acht bis neun Unterarten, die als Festlandsunterarten und Inselunterarten unterschieden werden.
-
+            Der besiedelte einst fast ganz Asien - vor 100 Jahren streiften noch mehr als 100.000 Tiger durch die Wälder. 2009 konnten nur noch 3200 Tiger weltweit gezählt werden. Auf dem Tigergipfel im russischen St. Petersburg im Jahr 2010 hat sich der WWF zum Ziel gesetzt, die Zahl der Tiger bis zum Jahr 2022 zu verdoppeln. Seitdem ist die Zahl der wild lebenden Tiger zum ersten Mal seit Jahrzehnten zumindest in einigen Ländern wieder angestiegen: Heute leben etwa 3890 dieser majestätischen Großkatzen in freier Wildbahn.
         </p>
             </section5>
     </div>
