--- a/Aufgabe_05/Aufgabe05.html
+++ b/Aufgabe_05/Aufgabe05.html
@@ -17,24 +17,30 @@
             <span></span>
 
             <ul id="menu">
-                <a href="#">
-                    <li>Wildkatzen</li>
-                </a>
-                <a href="#">
-                    <li>Hauskatzen</li>
-                </a>
-                <a href="#">
-                    <li>Streunerkatzen</li>
-                </a>
-                <a href="#">
-                    <li>Babykatzen</li>
-                </a>
-                <a href="#">
-                <li>Bengalkatze</li>
-                </a>
-                <a href="#">
-                    <li>Kontakt</li>
-                </a>
+                    <a href="#1">
+                        <li>Infos zu Katzen</li>
+                    </a>
+                    <a href="#2">
+                        <li>Wildkatzen</li>
+                    </a>
+                    <a href="#3">
+                        <li>Hauskatzen</li>
+                    </a>
+                    <a href="#4">
+                        <li>Streunerkatzen</li>
+                    </a>
+                    <a href="#5">
+                        <li>Babykatzen</li>
+                    </a>
+                    <a href="#6">
+                        <li>Bengalkatze</li>
+                        <a href="#7">
+                            <li>Tiger</li>
+                        </a>
+                    </a>
+                    <a href="#8">
+                        <li>Kontakt</li>
+                    </a>
             </ul>
         </div>
     </nav>
@@ -108,85 +114,78 @@
     </div>
 
     <div class="C">
-        <section1 class="texte">
-    <h2> Wildkatze </h2>
-    <p>
-        Europäische Wildkatze
-        Felis silvestris
-        Schulterhöhe: 35 bis 40 cm
-        Gewicht: 2,5 bis 8 kg
-        Lebensdauer: bis 15 Jahre
-        Lebensraum: große, ruhige, alte Wälder
-        Nahrung: Kleintiere, besonders Mäuse
-        Fortpflanzung: Hauptpaarungszeit im Februar; 2 bis 6 Junge nach etwa 10 Wochen; Aufzucht in alten Baumhöhlen
-        Verbreitung: ursprünglich Europa, Vorderasien; in Deutschland zeitweise fast ausgerottet; steigendes Vorkommen in Deutschland; gesichertes Vorkommen im Kellerwald
+            <section1 id="2" class="texte">
+                <h2> Wildkatze </h2>
+                <p>
+                    Europäische Wildkatze
+                    Felis silvestris
+                    Schulterhöhe: 35 bis 40 cm
+                    Gewicht: 2,5 bis 8 kg
+                    Lebensdauer: bis 15 Jahre
+                    Lebensraum: große, ruhige, alte Wälder
+                    Nahrung: Kleintiere, besonders Mäuse
+                    Fortpflanzung: Hauptpaarungszeit im Februar; 2 bis 6 Junge nach etwa 10 Wochen; Aufzucht in alten Baumhöhlen
+                    Verbreitung: ursprünglich Europa, Vorderasien; in Deutschland zeitweise fast ausgerottet; steigendes Vorkommen in Deutschland; gesichertes Vorkommen im Kellerwald
 
-    </p>
-<section1>
-</div>
-    <div class="C">
-        <section2 class="texte">
-        <h2> Hauskatze </h2>
-        <p>
-            Die Hauskatze ist keine Katzenrasse im eigentlichen Sinne. In den meisten Fällen werden die Katzen, die es in den unterschiedlichsten Wuchstypen und Farbvarianten gibt, der Rasse EKH (Europäisch Kurzhaar) zugeordnet. Ihre Abstammung haben Hauskatzen von den Wildkatzen. Sie haben sich im Verlauf der Evolution immer mehr an das Leben mit uns Menschen angepasst und sind heutzutage vollkommen domestiziert.
-        </p>
-        </section2>
-    </div>
+                </p>
+                <section1>
+        </div>
+        <div class="C">
+            <section2 id="3" class="texte">
+                <h2> Hauskatze </h2>
+                <p>
+                    Die Hauskatze ist keine Katzenrasse im eigentlichen Sinne. In den meisten Fällen werden die Katzen, die es in den unterschiedlichsten Wuchstypen und Farbvarianten gibt, der Rasse EKH (Europäisch Kurzhaar) zugeordnet. Ihre Abstammung haben Hauskatzen von den Wildkatzen. Sie haben sich im Verlauf der Evolution immer mehr an das Leben mit uns Menschen angepasst und sind heutzutage vollkommen domestiziert.
+                </p>
+            </section2>
+        </div>
 
         <div class="C">
-            <section6 class="texte">
-        <h2> Streunerkatze</h2>
-        <p>
-            In Großstädten, ländlichen Gegenden und in Gewerbegebieten streunen die Katzen auf der Suche nach Nahrung und Unterschlupf umher. All diese Katzen waren einmal Haustiere, die ausgesetzt und sich selbst überlassen wurden. In deutschen Haushalten leben über 12 Millionen Katzen, die von ihren Besitzern zumeist gut versorgt werden.
-            In deutschen Haushalten leben über 12 Millionen Katzen, die von ihren Besitzern zumeist gut versorgt werden. Dem gegenüber stehen etwa zwei Millionen Streunerkatzen, die täglich um ihr Überleben kämpfen müssen. Ob nun verletzt, abgemagert oder verwahrlost, das Leid von Streunerkatzen hat viele Facetten. Oft erreichen uns Anrufe von tierlieben Menschen, die im eigenen Garten oder in der Nachbarschaft eine oder mehrere Katzen beobachten, die scheinbar Hilfe benötigen. 
-        </p>
+            <section6 id="4" class="texte">
+                <h2> Streunerkatze</h2>
+                <p>
+                    In Großstädten, ländlichen Gegenden und in Gewerbegebieten streunen die Katzen auf der Suche nach Nahrung und Unterschlupf umher. All diese Katzen waren einmal Haustiere, die ausgesetzt und sich selbst überlassen wurden. In deutschen Haushalten leben über 12 Millionen Katzen, die von ihren Besitzern zumeist gut versorgt werden.
+                </p>
             </section6>
-    </div>
+        </div>
 
         <div class="C">
-            <section3 class="texte">
-        <h2>Babykatze </h2>
-        <p>
-            Wer die Wahl hat, hat bekanntlich die Qual: „Eine Rassekatze oder einen echten Mischling? Vom qualifizierten Züchter oder lieber von privat?“
-            Viele Fragen, die Du Dir erst einmal durch den Kopf gehen lassen solltest, bevor Du Dich überstürzt hinreißen lässt, oder, weil gerade nach der Paarungszeit der Katzen – also im Frühjahr oder Herbst – ein Überangebot an jungen Kätzchen herrscht.
-            <p>
-            Die Entscheidung muss man für einen langen Zeitraum, vielleicht 15 bis 20 Jahre, tragen können; es lohnt sich also, sich vorher in Ruhe darüber klar zu werden, wie die erwachsene Katze „beschaffen“ sein sollte.
-            Denn aus dem goldigen, kleinen Miez wird in absehbarer Zeit ein stattlicher Kater oder eine temperamentvolle Katze.
+            <section3 id="5"class="texte">
+                <h2>Babykatze </h2>
+                <p>
+                    Wer die Wahl hat, hat bekanntlich die Qual: „Eine Rassekatze oder einen echten Mischling? Vom qualifizierten Züchter oder lieber von privat?“
+                    Viele Fragen, die Du Dir erst einmal durch den Kopf gehen lassen solltest, bevor Du Dich überstürzt hinreißen lässt, oder, weil gerade nach der Paarungszeit der Katzen – also im Frühjahr oder Herbst – ein Überangebot an jungen Kätzchen herrscht.
+            </section3>
             </p>
-        
-        </section3>
-        </p>
-    </div>
-
-    <div class="C">
-        <section4 class="texte">
-        <h2> Bengalkatze </h2>
-        <p>
-            Die Bengal hat ein außergewöhnlich elegantes Fellmuster aus fein gezeichneten Rosetten (Kreisen). Es sieht einem Leopardenfell zum Verwechseln ähnlich! Auch wenn die Katze durch ihren schlanken Körper und dem hübschen Äußeren sehr anmutig wirkt: Sie ist alles andere als „etepetete“ (= zimperplich, geziert), sondern eher so etwas wie eine Leistungssportlerin unter den Katzen.
-            Obwohl ihr raubtierartiges Äußeres zu der Annahme verleitet, einen fauchenden Wildfang vor sich zu haben, erweisen sich Bengale als besonders anhänglich. Die Bengalkatze hat Ihnen viel zu „erzählen“, denn sie ist äußerst kommunikativ und plaudert ausgiebig mit Gurren und Miauen. Auch Körperkontakt schätzt sie sehr: Sie will ausdauernd kuscheln und begleitet ihre Menschen überall hin.
-        </p>
-        </section4>
-    </div>
-
-    <div>
-        <h2> </h2>
-        <p>
-
-        </p>
-    </div>
+        </div>
 
         <div class="C">
-            <section5 class="texte">
-        <h2>Tiger</h2>
-        <p>
-            Der Tiger (Panthera tigris) ist eine in Asien verbreitete Großkatze. Er ist aufgrund seiner Größe und des charakteristischen dunklen Streifenmusters auf goldgelbem bis rotbraunem Grund unverwechselbar. Es gibt acht bis neun Unterarten, die als Festlandsunterarten und Inselunterarten unterschieden werden.
-            Der besiedelte einst fast ganz Asien - vor 100 Jahren streiften noch mehr als 100.000 Tiger durch die Wälder. 2009 konnten nur noch 3200 Tiger weltweit gezählt werden. Auf dem Tigergipfel im russischen St. Petersburg im Jahr 2010 hat sich der WWF zum Ziel gesetzt, die Zahl der Tiger bis zum Jahr 2022 zu verdoppeln. Seitdem ist die Zahl der wild lebenden Tiger zum ersten Mal seit Jahrzehnten zumindest in einigen Ländern wieder angestiegen: Heute leben etwa 3890 dieser majestätischen Großkatzen in freier Wildbahn.
-        </p>
+            <section4 id="6" class="texte">
+                <h2> Bengalkatze </h2>
+                <p>
+                    Die Bengal hat ein außergewöhnlich elegantes Fellmuster aus fein gezeichneten Rosetten (Kreisen). Es sieht einem Leopardenfell zum Verwechseln ähnlich! Auch wenn die Katze durch ihren schlanken Körper und dem hübschen Äußeren sehr anmutig wirkt: Sie ist alles andere als „etepetete“ (= zimperplich, geziert), sondern eher so etwas wie eine Leistungssportlerin unter den Katzen.
+                </p>
+            </section4>
+        </div>
+
+        <div>
+            <h2> </h2>
+            <p>
+
+            </p>
+        </div>
+
+        <div id="7" class="C">
+            <section5  class="texte">
+                <h2>Tiger</h2>
+                <p>
+                    Der Tiger (Panthera tigris) ist eine in Asien verbreitete Großkatze. Er ist aufgrund seiner Größe und des charakteristischen dunklen Streifenmusters auf goldgelbem bis rotbraunem Grund unverwechselbar. Es gibt acht bis neun Unterarten, die als Festlandsunterarten und Inselunterarten unterschieden werden.
+
+                </p>
             </section5>
-    </div>
+        </div>
 
 <footer>
-    <div class="right">
+    <div id="8" class="right">
         <h2>Kontakt</h2>
         <p>Hochschule Furtwangen
             Robert-Gerwig-Platz 1
