--- a/Aufgabe_06/Aufgabe06.html
+++ b/Aufgabe_06/Aufgabe06.html
@@ -65,6 +65,8 @@
         <div class="main">
 
             <section class="C" id="main_left">
+                <h2>Miau</h2>
+                <p></p>
                 <img src="Katzen/cat.gif">
             </section>
 
