--- a/Aufgabe_06/Aufgabe06.html
+++ b/Aufgabe_06/Aufgabe06.html
@@ -65,9 +65,9 @@
         <div class="main">
 
             <section class="C" id="main_left">
-                <h2>Miau</h2>
+                <h2> </h2>
                 <p></p>
-                <img src="Katzen/cat.gif">
+                <img src="https://i.giphy.com/media/VKJSHtfTu5s64/giphy.webp">
             </section>
 
             <aside id="info" class="asideright">
