--- a/Typescript/js.html
+++ b/Typescript/js.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="shortcut icon" href="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-heart-128.png"
+    <link rel="shortcut icon" href="heart.png"
           type="image/x-icon">
     <title> ฅ^•ﻌ•^ฅ </title>
     <meta charset="UTF-8">
