--- a/Typescript/js.html
+++ b/Typescript/js.html
@@ -5,7 +5,7 @@
           type="image/x-icon">
     <title> ฅ^•ﻌ•^ฅ </title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="stylesheetj.css">
+    <link rel="stylesheet" type="text/css" href="sht1.css">
     <script language="javascript" type="text/javascript" src="script.js"></script>
 
 
