--- a/JAVA/JS.html
+++ b/JAVA/JS.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="shortcut icon" href="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-heart-128.png"
+    <link rel="shortcut icon" href="Cats/heart.png"
           type="image/x-icon">
     <title> ฅ^•ﻌ•^ฅ </title>
     <meta charset="UTF-8">
@@ -18,8 +18,8 @@
 <h2>
     <div id="zahl">0 Fische hat die Kisja gesnackt!</div>
 </h2>
-<img class="right" src="catfishr.png">
-<img class="left" src="catfishl.png">
+<img class="right" src="Cats/catfishr.png">
+<img class="left" src="Cats/catfishl.png">
 <div id="fish">
 </div>
 
