--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -15,7 +15,7 @@
         
    
     <li> <a href="https://weiberta.github.io/JAVA/JS.html " target="_blank">Typescript, 26.05.19 </a> </li>
-    <li> <a href="https://weiberta.github.io/AFG7/Aufgabe_07.html" target="_blank">TGypescript ohne CSS</a></br></li>
+    <li> <a href="https://weiberta.github.io/AFG7/Aufgabe_07.html" target="_blank">Typescript ohne CSS</a></br></li>
     <li> <a href="https://weiberta.github.io/Aufgabe_06/Aufgabe06.html"  target="_blank">Aufgabe 06, 13.05.19 </a> </li>
     <li> <a href="https://weiberta.github.io/Aufgabe_05/Konzept.JPG " target="_blank">Konzept 5, 09.05.19 </a><br> </li>
     <li> <a href="https://weiberta.github.io/Aufgabe_04/AFG04.html " target="_blank">Aufgabe 4, 05.05.2019</a></br> </li> 
