--- a/TS2/62_TS-Dungeon.html
+++ b/TS2/62_TS-Dungeon.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>TypeScript – Dungeon – Objekte</title>
 	<link rel="stylesheet" type="text/css" href="css/61-style.css">
-	<script src="js/62-TS-Example.js"></script>
+	<script src="AFG_08.ts"></script>
 </head>
 <body>
 <header>
