--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -11,7 +11,7 @@
     
     <!-- Hier bitte die Vorkenntnisse im Bereich Programmierung zu Beginn der Veranstaltung kurz beschreiben! -->
     
-<ul> <li> <a href="https://weiberta.github.io/TS_2/62_TS-Dungeon.html" target="_blank">Typescript2, 03.06.19</a></br></li>
+<ul> <li> <a href="https://weiberta.github.io/TS_2/62_TS-Dungeon.html" target="_blank">Typescript2, 03.06.19. Funktioniert nicht hochgeladen, sondern auf meinem Computer > Frage am Mittwoch nach, da ich das Problem nicht fixen kann! </a></br></li>
     <li> <a href="https://weiberta.github.io/JAVA/JS.html " target="_blank">Typescript, 26.05.19 </a> </li>
           <a href="https://weiberta.github.io/AFG7/Aufgabe_07.html" target="_blank">Typescript (OHNE CSS)</a></br>
     <li> <a href="https://weiberta.github.io/Aufgabe_06/Aufgabe06.html"  target="_blank">Aufgabe 06, 13.05.19 </a> </li>
