--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -10,11 +10,15 @@
     und diese -->
     
     <!-- Hier bitte die Vorkenntnisse im Bereich Programmierung zu Beginn der Veranstaltung kurz beschreiben! -->
-    
-<ul><li> <a href=" https://weiberta.github.io/TS_4/ts4.JPG " target="_blank">TS4 Konzept</a></br> </li>
-    <li> <a href="https://weiberta.github.io/Aufgabe_08/62_TS-Dungeon.html " target="_blank">Typescript2, Aufgabe 8 + 9</a></br></li> 
+    weiberta.github.io/Aufgabe_08a/62_TS-Dungeon.html 
+<ul>
+    <li> <a href="      " target="_blank">Aufgabe 10 wird nachgereicht</a></br></li>
+    <li> <a href=" https://weiberta.github.io/TS_4/ts4.JPG " target="_blank">TS4 Konzept</a></br> </li>
+    <li> <a href="https://weiberta.github.io/Aufgabe_08/62_TS-Dungeon.html " target="_blank">Typescript2, Aufgabe 9</a></br></li> 
+    <li> <a href="https://weiberta.github.io/Aufgabe_08a/62_TS-Dungeon.html " target="_blank">Aufgabe 8</a></br></li>
     <li> <a href="https://weiberta.github.io/JAVA/JS.html " target="_blank">Typescript, 26.05.19 </a> </li>
           <a href="https://weiberta.github.io/AFG7/Aufgabe_07.html" target="_blank">Typescript (OHNE CSS)</a></br>
+
     <li> <a href="https://weiberta.github.io/Aufgabe_06/Aufgabe06.html"  target="_blank">Aufgabe 06, 13.05.19 </a> </li>
     <li> <a href="https://weiberta.github.io/Aufgabe_05/Konzept.JPG " target="_blank">Konzept 5, 09.05.19 </a><br> </li>
     <li> <a href="https://weiberta.github.io/Aufgabe_04/AFG04.html " target="_blank">Aufgabe 4, 05.05.2019</a></br> </li> 
