--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -10,11 +10,9 @@
     und diese -->
     
     <!-- Hier bitte die Vorkenntnisse im Bereich Programmierung zu Beginn der Veranstaltung kurz beschreiben! -->
-    weiberta.github.io/Aufgabe_08a/62_TS-Dungeon.html 
-<ul>
-    <li> <a href="      " target="_blank">Aufgabe 10 wird nachgereicht</a></br></li>
-    <li> <a href=" https://weiberta.github.io/TS_4/ts4.JPG " target="_blank">TS4 Konzept</a></br> </li>
-    <li> <a href="https://weiberta.github.io/Aufgabe_08/62_TS-Dungeon.html " target="_blank">Typescript2, Aufgabe 9</a></br></li> 
+<ul><li> <a href="      " target="_blank">Aufgabe 10 wird nachgereicht</a></br></li>
+    <li> <a href="https://weiberta.github.io/TS_4/ts4.JPG " target="_blank">TS4 Konzept</a></br> </li>
+    <li> <a href="https://weiberta.github.io/Aufgabe_08/62_TS-Dungeon.html " target="_blank">Aufgabe 9</a></br></li> 
     <li> <a href="https://weiberta.github.io/Aufgabe_08a/62_TS-Dungeon.html " target="_blank">Aufgabe 8</a></br></li>
     <li> <a href="https://weiberta.github.io/JAVA/JS.html " target="_blank">Typescript, 26.05.19 </a> </li>
           <a href="https://weiberta.github.io/AFG7/Aufgabe_07.html" target="_blank">Typescript (OHNE CSS)</a></br>
