--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -8,9 +8,10 @@
 <li> <a href="" target="_blank"> , </a></br></li>
 
     und diese -->
-    
+     
     <!-- Hier bitte die Vorkenntnisse im Bereich Programmierung zu Beginn der Veranstaltung kurz beschreiben! -->
-<ul><li> <a href="      " target="_blank"> Bitte um Antwort (EIA-Discord) </a></br></li>
+<ul><li> <a href="https://weiberta.github.io/endaufgabe/ZIP/index Kopie.html" target="_blank"> ENDAUFGABE</a></br></li>
+    <li> <a href="https://weiberta.github.io/endaufgabe/ZIP" target="_blank"> .zip</a></br></li>
     <li> <a href="https://weiberta.github.io/TS_4/ts4.JPG " target="_blank">TS4 Konzept</a></br> </li>
     <li> <a href="https://weiberta.github.io/Aufgabe_08/62_TS-Dungeon.html " target="_blank">Aufgabe 9</a></br></li> 
     <li> <a href="https://weiberta.github.io/Aufgabe_08a/62_TS-Dungeon.html " target="_blank">Aufgabe 8</a></br></li>
