--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -7,11 +7,15 @@
 body {
 	font-family: arial;
 	font-size: small;
-	background: #eeeee
+	background: #eeeeee
 }
 </style>
 </head>
 <body>
+	<ul>
+		
+
+	</ul>
 	<!-- Hier die Links zu den gelösten Aufgaben einstellen, aktuelle oben, alte stehen lassen! Format: Aufgabenbezeichnung, Datum -->
 </body>
 </html>
