--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -9,7 +9,7 @@
     <!-- ----------------------------------------------- -->
     
 <ul>
-
+		Aufgaben
   <!-- 		<li> <a href="https://weiberta.github.io/EIA2/ " target="_blank">Aufgabe 9 </a> </li>
 		<li> <a href="https://weiberta.github.io/EIA2/L10/index.html" target="_blank"> </a> </li> 	-->		
 
