--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -9,10 +9,10 @@
     <!-- ----------------------------------------------- -->
     
 <ul>
-		Aufgaben
-  <!-- 		<li> <a href="https://weiberta.github.io/EIA2/ " target="_blank">Aufgabe 9 </a> </li>
-		<li> <a href="https://weiberta.github.io/EIA2/L10/index.html" target="_blank"> </a> </li> 	-->		
-
+		<u> Aufgaben </u>
+ 		<li> <a href="https://weiberta.github.io/Aufgabe-09/index.html" target="_blank">Aufgabe 8 </a> </li>
+	<!--	<li> <a href="https://weiberta.github.io/EIA2/L10/index.html" target="_blank"> </a> </li> 	-->		
+		<li> nur für die Endabgabe hier </li>
 </ul>   
     
 
