--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -8,12 +8,10 @@
    
     <!-- ----------------------------------------------- -->
     
-<ul>
-		<li> Nur für die Endabgabe hier. </li>
+<ul> Nur für die Endabgabe hier. 
 		
-	
- 		<li> <a href="https://weiberta.github.io/Aufgabe-09/index.html" target="_blank">Aufgabe 8</a> </li>
-		<li> <a href="https://weiberta.github.io/Aufgabe-09/Konzept-09/Konzept-09.pdf" target="_blank"> Konzept zu Aufgabe 8 </a> </li> 			
+ 	<li> <a href="https://weiberta.github.io/Aufgabe-09/index.html" target="_blank">Aufgabe 8</a> </li>
+	<li> <a href="https://weiberta.github.io/Aufgabe-09/Konzept-09/Konzept-09.pdf" target="_blank"> Konzept zu Aufgabe 8 </a> </li> 			
 		
 </ul>   
     
