--- a/L06_Server/CLIENT/Firework.html
+++ b/L06_Server/CLIENT/Firework.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Firework Bastelcenter</title>
-    <link rel="stylesheet" href="stylesheet.css" type="text/css" media="screen" />
-
+    <meta charset="utf-8" content="width=device-width, initial-scale=1.0" name="viewport">
+    <link rel="stylesheet" href="stylesheet.css" type="text/css" media="screen"/>
     <script src="GenerateContent.js" type="text/javascript" charset="utf-8"></script>
     <script src="Datastructures.js" type="text/javascript" charset="utf-8"></script>
+
+    <title>Firework Bastelcenter</title>
 
 </head>
 <body>
