--- a/L06_Server/CLIENT/Firework.html
+++ b/L06_Server/CLIENT/Firework.html
@@ -62,7 +62,8 @@
 <!-- <script src="canvas.js"> </script>-->
 
 
-  <button id="buttonspeichern" class="button">Speichern</button>
+ // <button id="buttonspeichern" class="button">Speichern</button>
+     <button type="button" id="buttonspeichern" class="button">Speichern</button>
   <button id="buttonloeschen" class="button">Löschen</button>
 
 
