--- a/L06_Server/CLIENT/Firework.html
+++ b/L06_Server/CLIENT/Firework.html
@@ -19,52 +19,51 @@
 
 <section id="section">
 
-<form id="form" method="get"> <!-- //  1) form div zu form id !!!!! -->
+    <form id="form" method="get"> <!-- //  1) form div zu form id !!!!! -->
 
-    <div>
-        <h2 id="feuerw" class="text">Feuerwerke zusammenstellen</h2>
+        <div>
+            <h2 id="feuerw" class="text">Feuerwerke zusammenstellen</h2>
 
-        <fieldset id="Feuerwerkskoerper">
-            <legend> Feuerwerkskörper </legend>
-        </fieldset>
+            <fieldset id="Feuerwerkskoerper">
+                <legend> Feuerwerkskörper</legend>
+            </fieldset>
 
-        <fieldset id="Explosionsform">
-            <legend>Explosionsform</legend>
-        </fieldset>
+            <fieldset id="Explosionsform">
+                <legend>Explosionsform</legend>
+            </fieldset>
 
-        <fieldset id="Explosionsradius">
-            <legend>Explosionsradius</legend>
-        </fieldset>
+            <fieldset id="Explosionsradius">
+                <legend>Explosionsradius</legend>
+            </fieldset>
 
-        <fieldset id="Farbe">
-            <legend>Farbe des Feuerwerks</legend>
-        </fieldset>
+            <fieldset id="Farbe">
+                <legend>Farbe des Feuerwerks</legend>
+            </fieldset>
 
 
-        <fieldset>
-            <legend>Explosionsdauer</legend>
-            0 Sekunden
-            <input type="range" name="Explosionsdauer" id="amount" min="0" max="5" step="1" value="0">
-            5 Sekunden
-            <progress id="progressbar" max="5" value="0"> </progress>
-        </fieldset>
+            <fieldset>
+                <legend>Explosionsdauer</legend>
+                0 Sekunden
+                <input type="range" name="Explosionsdauer" id="amount" min="0" max="5" step="1" value="0">
+                5 Sekunden
+                <progress id="progressbar" max="5" value="0"></progress>
+            </fieldset>
 
-    </div>
-</form>
+        </div>
+    </form>
 
     <div id="order">
-     <h3 class="text">Deine Zusammenstellung ...</h3>
+        <h3 class="text">Deine Zusammenstellung ...</h3>
     </div>
 
 </section>
 
-<canvas id="myCanvas"> </canvas>
+<canvas id="myCanvas"></canvas>
 <!-- <script src="canvas.js"> </script>-->
 
 
- // <button id="buttonspeichern" class="button">Speichern</button>
-     <button type="button" id="buttonspeichern" class="button">Speichern</button>
-  <button id="buttonloeschen" class="button">Löschen</button>
+<button id="buttonspeichern" class="button">Speichern</button>
+<button id="buttonloeschen" class="button">Löschen</button>
 
 
 </body>
