--- a/L06_Server/CLIENT/Firework.html
+++ b/L06_Server/CLIENT/Firework.html
@@ -61,9 +61,11 @@
 <canvas id="myCanvas"></canvas>
 <!-- <script src="canvas.js"> </script>-->
 
-
 <button id="buttonspeichern" class="button">Speichern</button>
-<button id="buttonloeschen" class="button">Löschen</button>
+<button id="buttonloeschen" type="reset" class="button">Löschen</button>
+
+<button id="buttonsenden" type="button" class="button">SEND</button>
+
 
 
 </body>
