--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta charset="utf-8" />
+<title>PAGES</title>
+<style>
+body {
+	font-family: helvetica;
+	font-size: big;
+    margin-right: 20%;
+	background: #eeeeee;
+}
+</style>
+</head> 
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<ul>    	<li><u><b>____________LINKS____________ </b></u></li>
+        <li> <a href="https://weiberta.github.io/L06_Server/CLIENT/Firework.html" target="_blank"> FIREWORK - Bastelcenter </a> </li>
+        <li> <a href="https://github.com/weiberta/EIA2" target="_blank"> Github Repository</a> </li>
+	</ul>
+	
+
 </body>
 </html>
