--- a/index.html
+++ b/index.html
@@ -6,14 +6,15 @@
 <style>
 body {
 	font-family: helvetica;
-	font-size: big;
-    margin-right: 20%;
+	font-size: 100px;
+    margin-right: 50%;
 	background: #eeeeee;
 }
 </style>
 </head> 
 <body>
-<ul>    	<li><u><b>____________LINKS____________ </b></u></li>
+<ul>    	<u><b>____________LINKS____________ </b></u>
+	<br>  </br> 
         <li> <a href="https://weiberta.github.io/L06_Server/CLIENT/Firework.html" target="_blank"> FIREWORK - Bastelcenter </a> </li>
         <li> <a href="https://github.com/weiberta/EIA2" target="_blank"> Github Repository</a> </li>
 	</ul>
