--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 <html>
 <head>
 <meta charset="utf-8" />
-<title>PAGES</title>
+<title> P A G E S </title>
 <style>
 body {
 	font-family: helvetica;
-	font-size: 100px;
-    margin-right: 50%;
+	font-size: 80px;
+	text-decorations: none;
+    	margin-right: 50%;
 	background: #eeeeee;
 }
 </style>
 </head> 
 <body>
-<ul>    	<u><b>____________LINKS____________ </b></u>
+<ul>    	<u><b>___________〈 L I N K S 〉___________ </b></u>
 	<br>  </br> 
         <li> <a href="https://weiberta.github.io/L06_Server/CLIENT/Firework.html" target="_blank"> FIREWORK - Bastelcenter </a> </li>
         <li> <a href="https://github.com/weiberta/EIA2" target="_blank"> Github Repository</a> </li>
