--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8" />
+<meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <title> P A G E S </title>
 <style>
 body {
@@ -16,7 +17,7 @@ body {
 <body>
 <ul>    	<u><b>___________〈 L I N K S 〉___________ </b></u>
 	<br>  </br> 
-        <li> <a href="https://weiberta.github.io/L06_Server/CLIENT/Firework.html" target="_blank"> FIREWORK - Bastelcenter </a> </li>
+        <li> <a href="https://weiberta.github.io/L06_Server/Landingpage-w20/Landingpage.html" target="_blank"> FIREWORK - Bastelcenter </a> </li>
         <li> <a href="https://github.com/weiberta/EIA2" target="_blank"> Github Repository</a> </li>
 	</ul>
 	
