--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 <style>
 body {
 	font-family: helvetica;
-	font-size: 80px;
+	font-size: 30px;
+	
+	margin-top: 10%;
+	text-align: center;
 	text-decorations: none;
-    	margin-right: 50%;
-	background: #eeeeee;
 }
 </style>
 </head> 
