--- a/L06_Server/Landingpage-w20/Landingpage.html
+++ b/L06_Server/Landingpage-w20/Landingpage.html
@@ -15,8 +15,9 @@
 <p> Speicher deine Kreationen und rufe sie später auf, um an Ihnen weiterzuarbeiten!</p>
 
 <!-- LINK ZUR ANWENDUNG HIER (wenn fertig) EINFÜGEN -->
-<a href="https://weiberta.github.io/L06_Server/CLIENT/Firework.html" target="_blank"
-   class="button button1">Feuerwerk zusammenstellen</a>
+<a href="<a href="https://weiberta.github.io/L06_Server/L06_Server/CLIENT/Firework.html" target="_blank"
+   class="button button1">Feuerwerk zusammenstellen </a>" target="_blank"
+
 
 <!-- Idee:
      LINK ACTIVITYDIAGRAM + USER INTERFACE (UI - SCRIBBLE)
