--- a/L06_Server/Landingpage-w20/Landingpage.html
+++ b/L06_Server/Landingpage-w20/Landingpage.html
@@ -15,7 +15,7 @@
 <p> Speicher deine Kreationen und rufe sie später auf, um an Ihnen weiterzuarbeiten!</p>
 
 <!-- LINK ZUR ANWENDUNG HIER (wenn fertig) EINFÜGEN -->
-<a href="<a href="https://weiberta.github.io/L06_Server/L06_Server/CLIENT/Firework.html" target="_blank"
+  <a href="https://weiberta.github.io/L06_Server/L06_Server/CLIENT/Firework.html" target="_blank"
    class="button button1">Feuerwerk zusammenstellen </a>" target="_blank"
 
 
