--- a/EIA2/Endabgabe-w20/CLIENT/Firework.html
+++ b/EIA2/Endabgabe-w20/CLIENT/Firework.html
@@ -67,7 +67,7 @@
         <button id="buttonloeschen" class="button">Löschen</button>
         <button id="buttonladen">Laden</button>
 
-        <script src="CanvasApp.js" type="text/javascript" charset="utf-8"></script>
+        <script src="DataStructures.js" type="text/javascript" charset="utf-8"></script>
 
 </body>
 </html>
