--- a/EIA2/Endabgabe-w20/CLIENT/Firework.html
+++ b/EIA2/Endabgabe-w20/CLIENT/Firework.html
@@ -66,7 +66,7 @@
 <button id="buttonimport" class="button">Import</button>
 <button id="buttonladen" class="button">Laden</button>
 <select id="loadedRockets">
-    <option value="none"> gespeicherte Feuerwerke </option>
+    <option value="Auswahl"> gespeicherte Feuerwerke </option>
 </select>
 
         <script src="DataStructures.js" type="text/javascript" charset="utf-8"></script>
