--- a/EIA2/Endabgabe-w20/CLIENT/Firework.html
+++ b/EIA2/Endabgabe-w20/CLIENT/Firework.html
@@ -27,8 +27,8 @@
             <h2 id="feuerw" class="text">Feuerwerke zusammenstellen</h2>
 
             <fieldset id="Farbe">
-                <legend>Farbe des Feuerwerks</legend>
-                <!--       <div id="huepreview" style="background-color: hsl(0,100%,50%)">&nbsp;&nbsp;&nbsp;&nbsp;</div>‚ -->
+                <legend>Farbe des Feuerwerks als HSL Wert</legend>
+                <p> 0 = rot ; 125 = grün : 250 = blau ; 60 = gelb ; 300 = pink </p>
             </fieldset>
 
             <fieldset id="Radius">
