--- a/EIA2/Endabgabe-w20/CLIENT/Firework.html
+++ b/EIA2/Endabgabe-w20/CLIENT/Firework.html
@@ -28,7 +28,7 @@
 
             <fieldset id="Farbe">
                 <legend>Farbe des Feuerwerks als HSL Wert</legend>
-                <p> 0 = rot ; 125 = grün : 250 = blau ; 60 = gelb ; 300 = pink </p>
+                <div class="note"> 0 = rot;  125 = grün ;  250 = blau ;  60 = gelb ;  300 = pink </div>
             </fieldset>
 
             <fieldset id="Radius">
