--- a/EIA2/Endabgabe-w20/CLIENT/Firework.html
+++ b/EIA2/Endabgabe-w20/CLIENT/Firework.html
@@ -63,8 +63,8 @@
         <button id="buttonspeichern" class="button">Speichern</button>
         <button id="buttonloeschen" class="button">Löschen</button>
 
-<button id="buttonimport" class="button">Import</button>
-<button id="buttonladen" class="button">Laden</button>
+<button id="buttonimport" class="button">hinzufügen</button>
+<button id="buttonladen" class="button">laden</button>
 <select id="loadedRockets">
     <option value="Auswahl"> gespeicherte Feuerwerke </option>
 </select>
