--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -10,8 +10,8 @@
     
 <ul> Nur für die Endabgabe hier. 
 		
- 	<li> <a href="https://weiberta.github.io/Aufgabe-09/index.html" target="_blank">Aufgabe 8</a> </li>
-	<li> <a href="https://weiberta.github.io/Aufgabe-09/Konzept-09/Konzept-09.pdf" target="_blank"> Konzept zu Aufgabe 8 </a> </li> 			
+ 	<li> <a href="https://weiberta.github.io/weiberta.github.io/EIA2/Endabgabe-w20/CLIENT/Firework.html" target="_blank"> Firework-Bastelcenter</a> </li>
+	<li> <a href="https://weiberta.github.io/Aufgabe-09/Konzept-09/Konzept-09.pdf" target="_blank"> Konzept </a> </li>
 		
 </ul>   
     
