--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -11,7 +11,7 @@
 <ul> Nur für die Endabgabe hier. 
 		
  	<li> <a href="https://weiberta.github.io/weiberta.github.io/EIA2/Endabgabe-w20/CLIENT/Firework.html" target="_blank"> Firework-Bastelcenter</a> </li>
-	<li> <a href="https://weiberta.github.io/Aufgabe-09/Konzept-09/Konzept-09.pdf" target="_blank"> Konzept </a> </li>
+	<li> <a href="https://weiberta.github.io/weiberta.github.io/EIA2-Doku.pdf" target="_blank"> Konzept </a> </li>
 		
 </ul>   
     
