--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -12,6 +12,9 @@
 		
  	<li> <a href="https://weiberta.github.io/weiberta.github.io/EIA2/Endabgabe-w20/CLIENT/Firework.html" target="_blank"> Firework-Bastelcenter</a> </li>
 	<li> <a href="https://weiberta.github.io/weiberta.github.io/EIA2-Doku.pdf" target="_blank"> Konzept </a> </li>
+	
+	<li> <a href="https://github.com/weiberta/Endabgabe-Korrektur" target="_blank">Repository DS Korrektur + Zip</a> </li>
+	<li> <a href="https://weiberta.github.io/Endabgabe-Korrektur/Korrektur/Endabgabe-w20/CLIENT/Firework.html" target="_blank">Funktionierender Code</a> </li>
 		
 </ul>   
     
