--- a/Steckbrief/steckbrief.htm
+++ b/Steckbrief/steckbrief.htm
@@ -13,8 +13,8 @@
  	<li> <a href="https://weiberta.github.io/weiberta.github.io/EIA2/Endabgabe-w20/CLIENT/Firework.html" target="_blank"> Firework-Bastelcenter</a> </li>
 	<li> <a href="https://weiberta.github.io/weiberta.github.io/EIA2-Doku.pdf" target="_blank"> Konzept </a> </li>
 	
-	<li> <a href="https://github.com/weiberta/Endabgabe-Korrektur" target="_blank">Repository DS Korrektur + Zip</a> </li>
-	<li> <a href="https://weiberta.github.io/Endabgabe-Korrektur/Korrektur/Endabgabe-w20/CLIENT/Firework.html" target="_blank">Funktionierender Code</a> </li>
+	 <a href="https://github.com/weiberta/Endabgabe-Korrektur" target="_blank">Repository DS Korrektur + Zip</a> 
+	 <a href="https://weiberta.github.io/Endabgabe-Korrektur/Korrektur/Endabgabe-w20/CLIENT/Firework.html" target="_blank">Funktionierender Code</a> 
 		
 </ul>   
     
